# sourdao.github.io

./: .gitignore  Anchor.toml  CRUST.md  Cargo.toml  README.md  package-lock.json  package.json  temp-faucet.json  tsconfig.json  tsconfig.test.json
.github/: copilot-instructions.md
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/about/: layout.tsx  page.tsx
app/crust/: layout.tsx  page.tsx
app/crust/leaderboard/: page.tsx
app/crust/profile/: page.tsx
app/handshake/: layout.tsx  page.tsx
app/whitepaper/: layout.tsx
components/: CTABanner.tsx  Community.tsx  ContractAddress.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  HolderBenefits.tsx  HowItWorks.tsx  Loading.tsx  Manifesto.tsx  MascotGuide.tsx  Navbar.tsx  Problem.tsx  Protocol.tsx  Rewards.tsx  Roadmap.tsx  Value.tsx  Whitepaper.tsx  WhitepaperCTA.tsx
components/crust/: BadgeWall.tsx  BakerCard.tsx  CrustApp.tsx  CrustContent.tsx  EditProfile.tsx  ShareCard.tsx  SolanaProvider.tsx
components/handshake/: HandshakeApp.tsx  HandshakeContent.tsx
lib/: LanguageContext.tsx  constants.ts  crust-score.ts  handshake-client.ts  solana.ts  translations.ts
programs/sour-handshake/: Cargo.toml
programs/sour-treasury/: Cargo.toml
programs/sour-treasury/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sour-treasury/src/instructions/: complete_batch.rs  deposit.rs  execute_batch.rs  init_config.rs  mod.rs  update_config.rs
public/: manifest.json
public/docs/: whitepaper.md
scripts/: devnet-addresses.json  init-config.ts
tests/: sour-handshake.ts
(+13 files in other folders)
