[package]
name = "sour-treasury"
version = "0.1.0"
description = "SOUR Protocol — The Treasury: Buyback + Protocol-Owned LP on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sour_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Pin to avoid edition2024-requiring versions (SBF Cargo is 1.79)
constant_time_eq = ">=0.3.0, <0.4.0"
